package com.face.model;

public class ErrorMessage {

	public final static String REQUEST_BODY_ERROR = "request body is invalid.";
	public final static String MEDIA_TYPE_ERROR = "media type is invalid.";
	public final static String FACE_API_SERVER_UNABLABLE_ERROR = "Face API server unavalable.";
	public final static String FACE_API_RESPONSE_ERROR = "Face API response is error.";
	public final static String UNEXPECTED_ERROR = "unexpected error.";
	
}
