package com.face.model;

public class ImageInfo {
	private String url;
	
	public void setUrl(String url) {
		this.url = url;
	}

	public String getUrl() {
		return url;
	}
}
