@startuml Face Emotion Analyzer API

' サーバーサイド
package "API" {

    package "Controller" {
        class FaceEmotionController {
            POST analyze()
        }

        class ErrorController {
            handleNotDetectedException()
            handleFaceApiException()
            handleFaceApiInvalidRequestBodyException()
            handleFaceApiInvalidRequestBodyException()
            handleInvalidMediaTypeException()
        }
    }

    package "Response" {

        class ResponseFactory {
            createErrorResponse(): ErrorResponse
            createFaceApiServerError(): FaceApiErrorResponse
            createFaceApiErrorResponse(): FaceApiErrorResponse
            createSuccessResponse(): ResponseData
            calcEmotionMean(): Emotion
        }

        class FaceApiErrorResponseDetail {
            code: string
            message: string
            getter()
            setter()
        }
        note bottom: FaceAPIからのエラー内容

        class ErrorResponse {
            error: string
        }

        class FaceApiErrorResponse {
            error: string
            details: FaceApiError
        }

    }


    package "Model" {
        class ResponseData {
            total: int
            mean: FaceAttributes
            peason: ResultData[]
        }

        class ResultData {
            faceId: string
            faceRectangle: FaceRectangle
            faceAttributes: FaceAttributes
        }
        note right: 成功時に返却する

        class FaceRectangle {
            top: int
            left: int
            width: int
            height: int
        }

        class FaceAttributes {
            emotion: Emotion
        }

        class Emotion {
            neutral: double
            anger : double
            contempt: double
            disgust: double
            fear: double
            happiness: double
            sadness: double
            surprise: double
        }

        class ImageInfo {
            url: string
            setter()
            getter()
        }

        
        class ErrorMessage {
            REQUEST_BODY_ERROR: string
            MEDIA_TYPE_ERROR: string
            FACE_API_SERVER_UNABLABLE_ERROR: string
            FACE_API_RESPONSE_ERROR: string
            UNEXPECTED_ERROR: string
        }
        note bottom: このAPIからのエラー文
        
    }

}

ResponseData "1" o-- "n" ResultData
ResponseData --> FaceAttributes
ResultData "1" o-- "1" FaceRectangle
ResultData "1" o-- "1" FaceAttributes
FaceAttributes "1" o-- "1" Emotion

ResponseFactory ..> ErrorMessage
ResponseFactory ..> ErrorResponse
ResponseFactory ..> FaceApiErrorResponse
ResponseFactory ..> ResponseData

FaceEmotionController -- ResponseFactory
FaceEmotionController ..> ErrorMessage
FaceEmotionController ..> ImageInfo
FaceEmotionController -- ResultData
FaceEmotionController ..> ResponseData

ErrorController -- ResponseFactory
ErrorController ..> ErrorMessage
ErrorController ..> ErrorResponse

FaceApiErrorResponse ..> FaceApiErrorResponseDetail

@enduml